--- a/package.json
+++ b/package.json
@@ -1,27 +1,162 @@
 {
-  "name": "Maduka-Grocery",
-  "type": "module",
+  "name": "maduka-grocery",
   "version": "1.0.0",
-  "description": "",
+  "description": "Maduka Grocery is a contemporary grocery store offering a diverse range of local and international products.",
   "main": "server.js",
-  "scripts": {
-    "server": "nodemon server.js",
-    "client": "npm start --prefix client",
-    "dev": "concurrently \"npm run server\" \"npm run client\""
-  },
-  "author": "Azuka Uteh",
-  "license": "ISC",
+  "type": "module",
   "dependencies": {
-    "body-parser": "^1.20.0",
+    "abbrev": "^1.1.1",
+    "accepts": "^1.3.8",
+    "ansi-regex": "^5.0.1",
+    "ansi-styles": "^4.3.0",
+    "anymatch": "^3.1.3",
+    "array-flatten": "^1.1.1",
+    "balanced-match": "^1.0.2",
+    "base64-js": "^1.5.1",
+    "basic-auth": "^2.0.1",
+    "binary-extensions": "^2.3.0",
+    "body-parser": "^1.20.2",
+    "bowser": "^2.11.0",
+    "brace-expansion": "^1.1.11",
+    "braces": "^3.0.2",
+    "bson": "^4.7.2",
+    "buffer": "^5.7.1",
+    "call-bind": "^1.0.7",
+    "chalk": "^4.1.2",
+    "chokidar": "^3.6.0",
     "color": "^4.2.3",
-    "concurrently": "^7.2.1",
+    "color-convert": "^2.0.1",
+    "color-name": "^1.1.4",
+    "color-string": "^1.9.1",
+    "concat-map": "^0.0.1",
+    "concurrently": "^7.6.0",
+    "content-disposition": "^0.5.4",
+    "content-type": "^1.0.5",
+    "cookie": "^0.6.0",
+    "cookie-signature": "^1.0.6",
     "cors": "^2.8.5",
-    "dotenv": "^16.0.1",
-    "express": "^4.18.1",
-    "mongoose": "^6.3.4",
-    "morgan": "^1.10.0"
+    "date-fns": "^2.30.0",
+    "debug": "^4.3.4",
+    "define-data-property": "^1.1.4",
+    "depd": "^2.0.0",
+    "destroy": "^1.2.0",
+    "dotenv": "^16.4.5",
+    "ee-first": "^1.1.1",
+    "encodeurl": "^1.0.2",
+    "es-define-property": "^1.0.0",
+    "es-errors": "^1.3.0",
+    "escalade": "^3.1.2",
+    "escape-html": "^1.0.3",
+    "etag": "^1.8.1",
+    "express": "^4.19.2",
+    "fast-xml-parser": "^4.2.5",
+    "fill-range": "^7.0.1",
+    "finalhandler": "^1.2.0",
+    "forwarded": "^0.2.0",
+    "fresh": "^0.5.2",
+    "function-bind": "^1.1.2",
+    "get-caller-file": "^2.0.5",
+    "get-intrinsic": "^1.2.4",
+    "gopd": "^1.0.1",
+    "has-flag": "^4.0.0",
+    "has-property-descriptors": "^1.0.2",
+    "has-proto": "^1.0.3",
+    "has-symbols": "^1.0.3",
+    "hasown": "^2.0.2",
+    "http-errors": "^2.0.0",
+    "ieee754": "^1.2.1",
+    "ignore-by-default": "^1.0.1",
+    "inherits": "^2.0.4",
+    "ip-address": "^9.0.5",
+    "is-binary-path": "^2.1.0",
+    "is-extglob": "^2.1.1",
+    "is-fullwidth-code-point": "^3.0.0",
+    "is-glob": "^4.0.3",
+    "is-number": "^7.0.0",
+    "jsbn": "^1.1.0",
+    "kareem": "^2.5.1",
+    "lodash": "^4.17.21",
+    "media-typer": "^0.3.0",
+    "memory-pager": "^1.5.0",
+    "merge-descriptors": "^1.0.1",
+    "methods": "^1.1.2",
+    "mime": "^1.6.0",
+    "mime-db": "^1.52.0",
+    "mime-types": "^2.1.35",
+    "minimatch": "^3.1.2",
+    "mongodb": "^4.17.2",
+    "mongodb-connection-string-url": "^2.6.0",
+    "mongoose": "^6.12.7",
+    "morgan": "^1.10.0",
+    "mpath": "^0.9.0",
+    "mquery": "^4.0.3",
+    "ms": "^2.1.2",
+    "negotiator": "^0.6.3",
+    "nodemon": "^2.0.22",
+    "nopt": "^1.0.10",
+    "normalize-path": "^3.0.0",
+    "object-assign": "^4.1.1",
+    "object-inspect": "^1.13.1",
+    "on-finished": "^2.4.1",
+    "on-headers": "^1.0.2",
+    "parseurl": "^1.3.3",
+    "path-to-regexp": "^0.1.7",
+    "picomatch": "^2.3.1",
+    "proxy-addr": "^2.0.7",
+    "pstree.remy": "^1.1.8",
+    "punycode": "^2.3.1",
+    "qs": "^6.11.0",
+    "range-parser": "^1.2.1",
+    "raw-body": "^2.5.2",
+    "readdirp": "^3.6.0",
+    "regenerator-runtime": "^0.14.1",
+    "require-directory": "^2.1.1",
+    "rxjs": "^7.8.1",
+    "safe-buffer": "^5.2.1",
+    "safer-buffer": "^2.1.2",
+    "send": "^0.18.0",
+    "serve-static": "^1.15.0",
+    "set-function-length": "^1.2.2",
+    "setprototypeof": "^1.2.0",
+    "shell-quote": "^1.8.1",
+    "side-channel": "^1.0.6",
+    "sift": "^16.0.1",
+    "simple-swizzle": "^0.2.2",
+    "simple-update-notifier": "^1.1.0",
+    "smart-buffer": "^4.2.0",
+    "socks": "^2.8.1",
+    "sparse-bitfield": "^3.0.3",
+    "spawn-command": "^0.0.2-1",
+    "statuses": "^2.0.1",
+    "string-width": "^4.2.3",
+    "strip-ansi": "^6.0.1",
+    "strnum": "^1.0.5",
+    "supports-color": "^7.2.0",
+    "to-regex-range": "^5.0.1",
+    "toidentifier": "^1.0.1",
+    "touch": "^3.1.0",
+    "tree-kill": "^1.2.2",
+    "tslib": "^2.6.2",
+    "type-is": "^1.6.18",
+    "undefsafe": "^2.0.5",
+    "undici-types": "^5.26.5",
+    "unpipe": "^1.0.0",
+    "utils-merge": "^1.0.1",
+    "uuid": "^8.3.2",
+    "vary": "^1.1.2",
+    "wrap-ansi": "^7.0.0",
+    "y18n": "^5.0.8"
   },
   "devDependencies": {
-    "nodemon": "^2.0.16"
-  }
+    "@babel/cli": "^7.24.1",
+    "@babel/core": "^7.24.3",
+    "@babel/preset-env": "^7.24.3"
+  },
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server.js"
+  },
+  "author": "azukauteh",
+  "license": "ISC"
+
 }
