--- a/git_utils/workflows/ai-review.yml
+++ b/git_utils/workflows/ai-review.yml
@@ -3,7 +3,7 @@ name: AI Code Review
 on:
   pull_request:
     types: [opened, synchronize, reopened]
-      push:
+  push:
     branches:
       - magnificent
 
@@ -18,10 +18,12 @@ jobs:
       - name: Set up Python
         uses: actions/setup-python@v4
         with:
-          python-version: 3.12
+          python-version: "3.12"
 
       - name: Install dependencies
-        run: pip install -r requirements.txt
+        run: |
+          python -m pip install --upgrade pip
+          pip install -r requirements.txt
 
       - name: Run AI reviewer
         env:
@@ -29,4 +31,5 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           GITHUB_REPOSITORY: ${{ github.repository }}
           PR_NUMBER: ${{ github.event.pull_request.number }}
-        run: python git_utils/workflows/run_ai_review.py
+        run: |
+          python git_utils/workflows/run_ai_review.py
